2003-03-06 Simon Waters <Simon@wretched.demon.co.uk>      

	* Correct pthread handling in configure.ac

	* Correct LIBOBJS handling on platforms without getopt_long

	* Avoid deprecated multiline string literals in cmd.c

	* Avoid redefining MAX and MIN macros on HPUX

	* Make pawncover constant to avoid difference between 
	  first and subsequent games. Affects many King safety 
	  calculations.

2003-02-16 Simon Waters <Simon@wretched.demon.co.uk>

	* Add getopt files to distribution for platforms without 
	  GNU C library

	* Replace ac_need_stdint_h with ac_create_stdint_h

	* Add acx_pthread, config.sub, config.guess

2003-02-11 Simon Waters <Simon@wretched.demon.co.uk>

	* Drop enpassant knowledge on "switch" command.

	* Add in 2 move exception to EvaluateDraw to
	  avoid drawing won games.

2003-02-05 Simon Waters <Simon@wretched.demon.co.uk>

	* Various string length issues tidied up.

2003-01-31 Simon Waters <Simon@wretched.demon.co.uk>

	* Implement "white" and "black" commands.

2003-01-29 Anil Mungal <vagrancy@rogers.com>

	* Two minor optimisations to eval.c (1% speed-up test evalspeed)

2003-01-29 Simon Waters <Simon@wretched.demon.co.uk>

	* Use getopt_long for option handling

	* Add standard options --help --version

	* Add command line command "usage"

	* Add option --hashsize

	* Rework hint to use first move in Tree

	* GetElapse time even when not against the clock

	* Modify aclocal.m4 to stop spurious 32's in configure
	  which break build AIX 4.2, and Solaris 2.5.1 

2003-01-27 Simon Waters <Simon@wretched.demon.co.uk>

	* Stop output of result in iterate if game has ended already.

	* Ensure PGNSaveGame output computer as correct colour player.

2003-01-13 Simon Waters <Simon@wretched.demon.co.uk>

	* Add time.h to common.h to define timeval on Cygwin

	* Add test for absence of nanosleep, may make
	  waiting inefficient on platforms without nanosleep
	  or usleep

	* Remain in analysis mode on "new".
